--- a/fe-docker/Dockerfile
+++ b/fe-docker/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /opt/ && mkdir -p /opt/config/fe/
 RUN mkdir -p /etc/httpd/certs/ && mkdir -p /etc/httpd/conf.d/
 RUN yum -y install git sudo libffi-devel openssl-devel && yum clean all
 RUN git clone https://github.com/sdn-sense/siterm-installers
-RUN cd siterm-installers && sudo sh ./fresh-siterm-fe-install.sh -R /opt/
+RUN cd siterm-installers && sudo sh ./fresh-siterm-fe-install.sh -R /opt/ -D yes
 
 RUN mkdir -p /opt/config/fe/{LookUpService,PolicyService,ProvisioningService}
 RUN find /opt/config/fe/ -type f -exec chmod 0644 {} \;
