--- a/agent-docker/conf/etc/dtnrm/main.conf
+++ b/agent-docker/conf/etc/dtnrm/main.conf
@@ -1,6 +1,7 @@
 [general]
 siteName = T2_US_Caltech
-webdomain = https://10.3.19.228
+# Use IPv4 address instead of hostname for webdomain link. Make sure to include port if different than 443.
+webdomain = https://10.3.19.228:8443
 logLevel = DEBUG
 debug = false
 logDir = /var/log/dtnrm-agent/
